sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 161: Unsupported variable specified
